c2prj1_cards/grade.txt
Grading at Tue Jan 29 19:50:33 UTC 2019
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:25:3: error: ‘return’ with no value, in function returning non-void [-Werror]
   return;
   ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
